# python_apps

./: .gitignore  LICENSE  README.md  appnames.py  cleanup-git-branches.ps1  config.py  fetchquote.py  sqldriver.py
portfolio/: dbupdate.[py
portfolio-app/: main.py  pyproject.toml
portfolio-manager/: .gitignore  app.py  generate_portfolio_sql.py
python-for-ai/: buildingprograms.py  corepython.py  datastructures.py  errorhandling.py  exttools.py  get_data.py  pythonbasics.py  requirements.txt
python-for-ai/docker-mcp/apitool-docker-app/: .dockerignore  .gitignore  Dockerfile  configsettings.docker.py  configsettings.py  docker-compose.yml  generate_cert.py  image-generator.py  imageapi.py  main.py  pyproject.toml  start.sh  webapp.py
python-for-ai/docker-mcp/apitool-docker-app/deploy/: 01-create-resource-group.ps1  02-create-container-registry.ps1  03-login-to-acr.ps1  04-build-docker-image.ps1  05-tag-and-push-image.ps1  06-get-acr-credentials.ps1  07-create-container-instance.ps1  08-update-container-instance.ps1  09-view-container-logs.ps1  10-get-container-status.ps1  README.md  deploy-all.ps1  update-deployment.ps1
python-for-ai/docker-mcp/apitool-docker-app/templates/: index.html
python-training/: placeholder-for-fixup.py
python-training/training/datascience/: .gitignore  capstone.py  charts.py  data-analysis.py  main.py  notesfortraining.md  pivottable.py  plotting.py  pyproject.toml  scipycluster.py  seaborndemo.py  testdata.xlsx  xlwriter.py
ragimpl/: .env  README.md  pyproject.toml  requirements.txt
sharedlib/: __init__.py  dbconnection.py
trading/: LICENSE  app.ini  app.json  fetchquote.py
training/: .gitignore  app.py  app2.py  dbconnection.py  messages.py  (+4 more)
(+43 files in other folders)
