[project]
name = "apitool-docker-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.121.2",
    "icrawler>=0.6.10",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "uvicorn>=0.38.0",
]
