[project]
name = "datascience"
version = "0.1.0"
description = "Scripts to explore data science concepts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip>=25.3",
    "scipy>=1.16.3",
]
